spade-tests/src/snapshots/spade_tests__parser__wal_trace_does_not_accept_bad_parameter.snap
---
source: spade-tests/src/parser.rs
---
#[wal_trace(clk=x, not_a_param=x)]
struct T {}


error: Invalid paremter
  ┌─ testinput:1:20
  │
1 │ #[wal_trace(clk=x, not_a_param=x)]
  │                    ^^^^^^^^^^^ Invalid parameter


